--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ experience. Experienced in Agile / Lean software development processes including
 
       </div>
     </div>
-    <div class="parallax"><img src="background1.jpg" alt="Unsplashed background img 1"></div>
+    <div class="parallax"><img src="erol-ahmed-80094.jpg" alt="Unsplashed background img 1"></div>
   </div>
 
 
@@ -123,7 +123,7 @@ experience. Experienced in Agile / Lean software development processes including
         </div>
       </div>
     </div>
-    <div class="parallax"><img src="background2.jpg" alt="Unsplashed background img 2"></div>
+    <div class="parallax"><img src="averie-woodard-111832.jpg" alt="Unsplashed background img 2"></div>
   </div>
 
   <div class="container">
@@ -132,7 +132,7 @@ experience. Experienced in Agile / Lean software development processes including
       <div class="row">
         <div class="col s12 center">
           <h3><i class="mdi-content-send brown-text"></i></h3>
-          <h4>Resume</h4>
+          <h4>My Projects</h4>
         </div>
       </div>
 
@@ -144,7 +144,7 @@ experience. Experienced in Agile / Lean software development processes including
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <h5 class="header col s12 light">Not sure what to put here</h5>
+          <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud_download</i>Resume</a>
         </div>
       </div>
     </div>
