Add style and content tweaks
Add favicon, update title to be more descriptive
Make cards slightly larger to accommodate text

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <title>Susan Jacobs</title>
-
+  <title>Susan Jacobs - Portfolio</title>
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -47,9 +47,9 @@
           <h5 class="header col s12 light">I'm a Web Developer in training with extensive software engineering management and server-side development
 experience. Experienced in Agile / Lean software development processes including Scrum and Kanban. </h5>
         </div>
-        <div class="row center">
-          <div class="col s12">
-            <img src="SusanProfilePhoto.jpg" alt="Susan Jacobs" class="circle" height=400 width=300 >
+        <div class="row">
+          <div class="col s12 center">
+            <img src="SusanProfilePhoto.jpg" alt="Susan Jacobs" class="circle responsive-img z-depth-4" height=400 width=300 >
           </div>
       </div>
         <br><br><br><br>
@@ -132,8 +132,9 @@ experience. Experienced in Agile / Lean software development processes including
             feature that I developed improved our users' experience in some way.
           </h5>
           <h5 class="header col s12 light left-align">When the opportunity arose for me to leave my job and take some time
-            for myself, I decided to attend the Web Development Immersive class at General Assembly. I am very interested in JavaScript.  It is a challenging language to learn, but it allows us to develop
-            browser-based applications that are interactive and fun to use. The effort it takes to learn to write good JavaScript code is well worth it.
+            for myself, I decided to attend the Web Development Immersive class at General Assembly to build my web development skills since my experience
+            is primarily with server-side code. I am very interested in JavaScript in particular.  It is a challenging language to learn, but it allows us to develop
+            browser-based applications that are interactive and fun to use. It is well worth the effort it takes to learn to write good JavaScript code.
             I am bringing my computer science background, extensive software development experience, and commitment to writing high-quality, easily
             maintainable code to the world of JavaScript and Web Development.
           </h5>
