Update About me, download resume
Update About me, add pdf resume, update download resume button to
reference new file.

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ experience. Experienced in Agile / Lean software development processes including
             <h2 class="center brown-text"><i class="material-icons">laptop</i></h2>
             <h5 class="center">Front End</h5>
             <ul class="center light">
-              <li>JavaScript</li>
+              <li>JavaScript (ES2015)</li>
               <li>jQuery</li>
               <li>Bootstrap</li>
               <li>Handlebars</li>
@@ -127,16 +127,20 @@ experience. Experienced in Agile / Lean software development processes including
           <h1 class="header center light">About Me</h1>
           <div class="row center">
             <h5 class="header col s12 light left-align">I am a Web Developer getting back to what I love doing - coding. At my most recent job, I began as a
-            Principal Software Engineer, and transitioned to an Engineering Manager role. I enjoy managing teams, but I found that I no longer had the time to
-            continue coding too. I missed the feeling I got when I solved a particularly difficult problem, and the satisfaction I felt when a
+            Principal Software Engineer, and was promoted to an Engineering Manager role. I enjoy managing teams, but I found that I no longer had the time to
+            continue coding alongside my management responsibilities. I missed the thrill I got when I solved a particularly difficult problem, and the satisfaction I felt when a
             feature that I developed improved our users' experience in some way.
           </h5>
-          <h5 class="header col s12 light left-align">When the opportunity arose for me to leave my job and take some time
-            for myself, I decided to attend the Web Development Immersive class at General Assembly to build my web development skills since my experience
-            is primarily with server-side code. I am very interested in JavaScript in particular.  It is a challenging language to learn, but it allows us to develop
-            browser-based applications that are interactive and fun to use. It is well worth the effort it takes to learn to write good JavaScript code.
+          <h5 class="header col s12 light left-align">
+            When the opportunity arose for me to leave my job and take some time
+            for myself, I made the decision to attend the Web Development Immersive class at General Assembly to build my web development skills. My development experience is
+            primarily with server-side code, but I became very interested in JavaScript development while managing a team that was developing primarily in JavaScript.
+            It is a challenging language to learn, but when implemented well it can be used to develop web applications that are fun and easy to use.
+          </h5>
+          <h5 class="header col s12 light left-align">
             I am bringing my computer science background, extensive software development experience, and commitment to writing high-quality, easily
-            maintainable code to the world of JavaScript and Web Development.
+            maintainable code to the world of JavaScript and Web Development. I am looking for opportunites where I can continue to improve my
+            JavaScript skills and use my considerable software development experience to help a team develop kick-ass products for their users.
           </h5>
           </div>
           <br><br>
@@ -207,7 +211,7 @@ experience. Experienced in Agile / Lean software development processes including
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
-          <a class="waves-effect waves-light btn-large"><i class="material-icons left">cloud_download</i>Resume</a>
+          <a href="SusanJacobsWebDeveloper.pdf" class="waves-effect waves-light btn-large" download><i class="material-icons left">cloud_download</i>Resume</a>
         </div>
       </div>
     </div>
