Updated Project 3 info and resume
- Added updated version of resume
- Added screenshot of Job Seeker application
- Updated index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <br><br>
         <h1 class="header center teal-text text-darken-4">Susan Jacobs</h1>
         <div class="row center">
-          <h5 class="header col s12 light">I'm a Web Developer in training with extensive software engineering management and server-side development
+          <h5 class="header col s12 light">I'm a Web Developer with extensive software engineering management and server-side development
 experience. Experienced in Agile / Lean software development processes including Scrum and Kanban. </h5>
         </div>
         <div class="row">
@@ -184,21 +184,21 @@ experience. Experienced in Agile / Lean software development processes including
             </div>
             <div class="card-action">
               <a href="https://sjacobs146.github.io/recipe-tracker/" target="_blank">Recipes</a>
-              <a href="https://github.com/sjacobs146/recipe-api" target="_blank">GitHub Repo</a>
+              <a href="https://github.com/sjacobs146/recipe-tracker" target="_blank">GitHub Repo</a>
             </div>
           </div>
         </div>
         <div class="col s4 m4">
           <div class="card medium">
             <div class="card-image">
-              <img src="code-sample.png">
+              <img src="jobseeker.png">
             </div>
             <div class="card-content">
-              <p>Project 3</p>
+              <p>Full-stack application to keep track of job opportunities. JavaScript client using Ember framework with Ruby-on-Rails and Postgres back-end.</p>
             </div>
             <div class="card-action">
-              <a href=# target="_blank">Project 3</a>
-              <a href=# target="_blank">GitHub Repo</a>
+              <a href="https://sjacobs146.github.io/job-seeker/" target="_blank">Job Seeker</a>
+              <a href="https://github.com/sjacobs146/job-seeker" target="_blank">GitHub Repo</a>
             </div>
           </div>
         </div>
